--- a/OPENAI_API_KEY-Test.html
+++ b/OPENAI_API_KEY-Test.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>OpenAI API Key Test</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdn.staticfile.org/jquery/3.5.1/jquery.min.js"></script>
     <style>
         body {
             font-family: Arial, sans-serif;
